fix: control pane overlaps with board sometimes

--- a/src/components/Board/index.module.css
+++ b/src/components/Board/index.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   min-width: 300px;
+  flex-shrink: 0;
 }
 
 .BoardContent {
@@ -10,11 +11,11 @@
   flex-direction: row;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .Overall {
-    width: 95%;
-    margin-bottom: 5px;
+    width: 90%;
     min-width: 280px;
+    margin-bottom: 10px;
   }
 
   .Overall:first-of-type::before {
@@ -33,5 +34,12 @@
     font-family: Orbitron;
     margin-bottom: 10px;
     text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .Overall {
+    width: 95%;
+    margin-bottom: 5px;
   }
 }
